# PyMotionDriver

./: LICENSE  README.md  requirements.txt  setup.py
PyMotionDriver/: MotionHelper.py  PyMotionDriver.pyi  __init__.py
src/: CMakeLists.txt  helper_3dmath.h  pybind11_wrap.cpp
src/I2Cdev/: I2Cdev.h
src/inv_mpu_lib/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.h
